retrieveUnpackaged/objects/Logic_Model__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Logic Models</relationshipLabel>
        <relationshipName>Logic_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inputs__c</fullName>
        <label>Inputs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Long_Term__c</fullName>
        <label>Long Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mid_Term__c</fullName>
        <label>Mid Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outputs__c</fullName>
        <label>Outputs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem__c</fullName>
        <label>Problem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Term__c</fullName>
        <label>Short Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Logic Model</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Logic Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logic Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>